--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
 
 }
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: #000000;
 }
 h1,h2,h3,h4,h5,h6,p{
@@ -23,6 +25,7 @@ p{
 
 .brand-name{
     color: rgb(230, 83, 60);
+    font-style: italic;
 }
 .nav{
     /* max-width: 80%; */
@@ -65,7 +68,7 @@ img{
 .header-text-desc{
     max-width: 440px;
     /* text-align: justify; */
-    opacity: 0.5;
+    font-weight: 400;
     font-size: 1rem;
     margin: 30px 0px;
 }
