--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
+
+
+
 body{
     font-family: "Inter", sans-serif;
     background-color: #000000;
@@ -18,6 +21,13 @@ h1,h2,h3,h4,h5,h6,p{
 p{
     font-size: 0.7rem;
     opacity: 0.5;
+}
+.shape{
+    font-family: 'Miama', sans-serif;
+    font-weight: normal;
+    font-size: 3.5rem;
+    letter-spacing: 5px;
+    font-style: italic;
 }
 
 
@@ -87,7 +97,8 @@ img{
 
 h1.header-text-title {
     font-size: 3.5rem;
-    font-weight: bolder;
+    font-weight: 900;
+    line-height: 1.2;
 }
 header {
     max-width: 80%;
@@ -186,11 +197,13 @@ p.habits-image-desc {
 }
 
 h1.habits-text-title {
-    font-size: 2.2rem;
+    font-size: 1.9rem;
+    font-weight: 900;
 }
 
 p.habits-text-desc {
-    /* max-width: 200px; */
+    max-width: 450px;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -218,16 +231,21 @@ p.habits-text-desc {
     max-width: 40%;
 }
 
-.run-image {
-    max-width: 30%;
+div.run-image {
+    background: url('images/run.jpg');
+    /* background-repeat: no-repeat; */
+    background-position: center;
+    background-size: cover;
+    width: 370px;
+    max-width: 100%;
+    height: 220px;
     border-radius: 12px;
 }
-.run-image img{
-    border-radius: 15px;
-}
+
 
 h1.run-text-title {
     font-size: 2rem;
+    font-weight: 900;
 }
 
 p.run-text-desc {
@@ -248,23 +266,31 @@ p.run-text-desc {
 
 .teams-image{
    
-    position: relative;
+position: relative;
+   
+border-radius: 12px;
 }
 .teams-image img{
     border-radius: 12px;
+    width: 320px;
+    height: 250px;
+    object-fit: cover;
 }
 .teams-text{
-    max-width: 35%;
+    max-width: 100%;
     margin: 0 auto;
     text-align: center;
     line-height: 1.7;
     margin-bottom: 50px;
 }
 .teams-title{
-    font-size: 2.3rem;
+    font-size: 2rem;
+    font-weight: 900;
 }
 .teams-desc{
     text-align: center;
+    max-width: 450px;
+    margin: 0 auto;
 }
 .teams-image-text {
     position: absolute;
@@ -298,6 +324,8 @@ h1.footer-fitness-title {
     color: rgb(230, 83, 60);
     font-size: 3rem;
     margin-bottom: 15px;
+    /* font-weight: 800; */
+    font-style: italic;
 }
 
 .footer-fitness {
@@ -385,6 +413,13 @@ header .header-container .btn{
 .habits-text, .header-container-images, .habits-image, .habits-text, .run-text, p.run-text-desc, .run-image, .footer-fitness{
     max-width: 100%;
 }
+.teams-image-container{
+
+    grid-template-columns: repeat(1,1fr);
+
+}
+
+
 .run-text .btn{
     width:100%; 
     padding: 15px;
